pain: urls plus visibles et bug css (safari reconnait mal la partie before d'un lien)
git-svn-id: https://www-lipn.univ-paris13.fr/svn/licences/trunk/outils/pain@564 04a62a05-9fe5-4f9b-8506-f2d01d604607

--- a/sources/css/general.css
+++ b/sources/css/general.css
@@ -582,12 +582,23 @@ a {
 }
 */
 
-a.url > span.url {
-    display: none;
+a.url {
+    text-decoration: none;
+   font-family: monospace;
+ color: white;
+ background-color: black;
+padding-right: 14px;
+ /* white-space: nowrap;
+	width: 50px;
+	overflow: hidden;
+	text-overflow: ellipsis; */
+background: url("img/spip_out.gif") black center right no-repeat;
 }
 
-a.url > span.urlicon:after {
-    content:"lien";
+
+a.url > img.urlicon {
+display: none;
+margin-left: 4px;
 }
 
 /* aide-memoire ---
